[package]
name = "dsmr42"
version = "0.1.0"
authors = ["Johan Geluk <johan@geluk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nom]
version = "6.0"
default-features = false

[dependencies.arrayvec]
version = "0.5"
default-features = false

[dependencies.hex]
version = "0.4"
default-features = false
