[package]
name = "meter-reader"
version = "0.1.0"
authors = ["Johan <johan@geluk.io>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
log = "0.4.11"
nb = "*"

[dependencies.smoltcp]
version = "0.7.5"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-dhcpv4", "socket-raw", "socket-tcp", "socket-icmp", "log"]

[dependencies.enc28j60]
git = "https://github.com/geluk/enc28j60"
branch = "master"

[dependencies.teensy4-bsp]
version = "0.2.0"
features = ["rt"]

[dependencies.arrayvec]
version = "0.7.2"
default-features = false
features = []

[dependencies.embedded-mqtt]
git = "https://github.com/wfdewith/embedded-mqtt.git"
branch = "master"

[dependencies.dsmr42]
path = "../dsmr42"
